# aspen

./: .gitignore  Cargo.toml  crucible.toml
crates/aspen-engine/: Cargo.toml
crates/aspen-engine/src/: main.rs
crates/aspen-eval/: Cargo.toml
crates/aspen-eval/src/: evaluation.rs  lib.rs  tables.rs
crates/aspen-search/: Cargo.toml
crates/aspen-search/src/: search.rs
crates/aspen-uci/: Cargo.toml
crates/aspen-uci-derive/: Cargo.toml
crates/aspen-uci-derive/src/: lib.rs
crates/aspen-uci/src/: command.rs  driver.rs  engine.rs  error.rs  lib.rs  options.rs  response.rs
crates/aspen-uci/tests/: derive_kinds.rs
