[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
aspen-engine.path = "crates/aspen-engine"
aspen-uci.path = "crates/aspen-uci"
aspen-uci-derive.path = "crates/aspen-uci-derive"

clap = { version = "4.6.1", features = ["derive"] }
shakmaty = "0.30.0"
thiserror = "2.0.18"
oneshot = { version = "0.2.1", features = ["std"] }
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"

[workspace.lints.rust]
missing_debug_implementations = "warn"
